Revert "removed tab slot, fixed the issue of invisible groups"
This reverts commit 28fe35d96f779830646db746f9535f5581334117.

--- a/src/styles/LinkedGroup.scss
+++ b/src/styles/LinkedGroup.scss
@@ -1,4 +1,10 @@
 .obsidian-vertical-tabs-container {
+	.tree-item.is-group.is-linked-group {
+		.tree-item.is-tab.is-tab-slot {
+			display: none;
+		}
+	}
+
 	.tree-item.is-linked-btn .tree-item-self {
 		color: var(--text-faint);
 		word-break: break-all;
